@@ -48,6 +48,7 @@ public:
 protected:
 	// these are the custom functions and vars we've added!
         void	DoDisplayError(CString szFunction, CString szCause);
+        void	DoDisplayWarning(CString szFunction, CString szCause);
 
 	Image         m_pImage;
 	CString       m_szFile;
