@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2005-01-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> win2k/IMDisplay/IMDisplayDoc.cpp (DoReadImage): Ensure that
+        image is in RGB color space after being read since this is what
+        Windows expects.
+
+</UL>
+<p>
 2005-01-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
